# spructure

./: .gitignore  README.md  inference.py  main.py  predicates.py  pyproject.toml  run.py  utils.py
config/: config.json  config.yaml  hierarchy.json  hierarchy.yaml  query.txt
old/: mlsort.py
src/: debug.py  fetch.py  main.py  utils.py
