[tool.poetry]
name = "sample-organizer"
version = "0.1.0"
description = "Splice sample library organizer"
authors = ["Szymon Stypa <szymon@backtick.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
librosa = "0.10.0"
numpy = "1.23.5"
IPython = "8.10.0"
click = "^8.1.7"
pypika = "^0.48.9"
pyyaml = "^6.0.2"
tqdm = "^4.66.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
